# Marina

./: ATTACHMENT_SYSTEM_README.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  README.md  SONG_REVISION_SYSTEM.md  SPEECH_FEATURES.md  debug_test.py  marina_cli.py  marina_llm_api.py  marina_memory_log.json  media_upload_logic.py  requirements.txt  requirements_speech.txt  requirements_stt.txt  resource_reserver.py  sandbox_checker.py  self_destruct.py  setup.py  spectra_config.yaml  start_marina_api.sh
DAMD/: pyproject.toml
DAMD/damd/: __init__.py  cli.py  handlers.py  utils.py
DAMD/examples/: demo.py
DAMD/tests/: test_core.py
Drift/: FEATURES.md  (+13 more)
knowledge_scrapers/: CLI_USAGE.md  CLI_USAGE_EXAMPLES.md  Cargo.toml  ENGINES_INTEGRATION_SUMMARY.md  MULTI_LANGUAGE_INTEGRATION.md  README.md  README_Enhanced_Pipeline.md  academic_scraper.py  archwiki_flatpak_scraper.py  documentation_scraper.py  documentation_scraper.rs  ecommerce_scraper.js  ecommerce_scraper.py  enhanced_scraping_pipeline.py  forum_scraper.go  forum_scraper.py  general_scraper.py  job_scraper.py  pre_scrape_engine.py  real_estate_scraper.py  scraper_registry.py  scraper_registry_v2.py  sitemap_alphabetical_scraper.py  social_media_scraper.js  social_media_scraper.py  test_enhanced_pipeline.py  usage_examples.py
knowledge_scrapers/enhanced_results/: enhanced_pipeline_pornhub.com_20250720_134319.json  enhanced_pipeline_pornhub.com_20250720_134553.json  enhanced_pipeline_tmz.com_20250720_134926.json  enhanced_pipeline_tmz.com_20250720_135529.json  enhanced_pipeline_tmz.com_20250720_135933.json  enhanced_pipeline_tmz.com_20250720_141148.json
knowledge_scrapers/scraping_results/: academic_scrape_arxiv_20250725_124635.json  academic_scrape_arxiv_20250725_124646.json  archwiki_flatpak_scrape_20250720_121450.json  archwiki_flatpak_scrape_20250724_154112.json  archwiki_flatpak_scrape_20250725_120121.json  archwiki_flatpak_scrape_20250726_120111.json  archwiki_flatpak_scrape_20250727_120057.json  archwiki_flatpak_scrape_20250728_124644.json  archwiki_flatpak_scrape_20250729_120116.json  archwiki_flatpak_scrape_20250730_120130.json  campaign_demo_test_20250725_124657.json  documentation_scrape_readthedocs_20250725_124657.json  news_scrape_bbc_co_uk_20250720_123905.json  news_scrape_bbc_co_uk_20250720_123930.json  news_scrape_bbc_co_uk_20250720_124308.json  (+20 more)
(+278 files in other folders)
